2003-05-19  Maciej Stachowiak  <mjs@apple.com>

        - fixed 3261096 - Make WebKit an umbrella framework

        * WebKit.pbproj/project.pbxproj: Build WebKit as a public umbrella
	framework when doing a B&I build.

2003-05-19  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

        * Panels.subproj/WebAuthenticationPanel.m: Now imports Foundation/NSURLCredential.h
        * WebCoreSupport.subproj/WebCookieAdapter.m: Now imports Foundation/NSHTTPCookie.h

2003-05-19  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

        Changed imports to include headers from Foundation                   
        instead of WebFoundation. 

        Removed WebFoundation.framework as a dependency in
        the project file.

        * History.subproj/WebHistory.m:
        * History.subproj/WebHistoryItem.m:
        * History.subproj/WebHistoryPrivate.m:
        * History.subproj/WebURLsWithTitles.m:
        * Misc.subproj/WebDownload.h:
        * Misc.subproj/WebDownload.m:
        * Misc.subproj/WebFileDatabase.m:
        * Misc.subproj/WebIconDatabase.m:
        * Misc.subproj/WebIconLoader.m:
        * Misc.subproj/WebKitErrors.m:
        * Misc.subproj/WebKitErrorsPrivate.h:
        * Misc.subproj/WebNSPasteboardExtras.m:
        * Misc.subproj/WebNSViewExtras.m:
        * Panels.subproj/WebAuthenticationPanel.h:
        * Panels.subproj/WebAuthenticationPanel.m:
        * Panels.subproj/WebPanelAuthenticationHandler.h:
        * Panels.subproj/WebPanelAuthenticationHandler.m:
        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        * Plugins.subproj/WebNetscapePluginDocumentView.m:
        * Plugins.subproj/WebNetscapePluginEmbeddedView.m:
        * Plugins.subproj/WebNetscapePluginRepresentation.m:
        * Plugins.subproj/WebNetscapePluginStream.m:
        * Plugins.subproj/WebNullPluginView.m:
        * Plugins.subproj/WebPluginController.m: