@@ -1,3 +1,15 @@
+2003-05-20  Ken Kocienda  <kocienda@apple.com>
+
+        Reviewed by Darin
+
+	Due to some header file changes in Foundation on Panther, 
+	Tweaked some includes so that WebKit builds on Jaguar 
+	and Panther.
+
+        * Carbon.subproj/CarbonWindowFrame.m:
+        * Plugins.subproj/WebNetscapePluginPackage.m:
+        * Plugins.subproj/WebPluginPackage.m:
+
 2003-05-19  Maciej Stachowiak  <mjs@apple.com>
 
         - fixed 3261096 - Make WebKit an umbrella framework
